--- a/src/ActuatreePlugin/ActuatreePlugin.csproj
+++ b/src/ActuatreePlugin/ActuatreePlugin.csproj
@@ -47,6 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actuatree.Credits.cs" />
     <Compile Include="Actuatree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
