build: use C# file wildcard instead

--- a/src/ActuatreePlugin/ActuatreePlugin.csproj
+++ b/src/ActuatreePlugin/ActuatreePlugin.csproj
@@ -47,10 +47,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actuatree.Credits.cs" />
-    <Compile Include="Actuatree.cs" />
-    <Compile Include="Actuatree.Hooks.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="*.cs" />
+    <Compile Include="Properties\*.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
