--- a/src/ActuatreePlugin/ActuatreePlugin.csproj
+++ b/src/ActuatreePlugin/ActuatreePlugin.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -31,10 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MMHOOK_OTAPI, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\MMHOOK_OTAPI.dll</HintPath>
-    </Reference>
     <Reference Include="OTAPI">
       <HintPath>..\..\paket-files\httpdependencies\github.com\TShock\OTAPI.dll</HintPath>
     </Reference>
